5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1692_1100.log
== TEST (2019-05-01 22:32:44) 
-- CODE:
a = int(input("Valor"))
print('Entrada: ', x)
if(a==2):
	b = "tartaruga"
elif(a==5):
	b = "garca"
elif(a==10):
	b = "arara"
elif(a==20):
	b = ""
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print('Entrada: ', x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:32:57) 
-- CODE:
a = int(input("Valor"))
print('Entrada: ', a)
if(a==2):
	b = "tartaruga"
elif(a==5):
	b = "garca"
elif(a==10):
	b = "arara"
elif(a==20):
	b = ""
-- OUTPUT:
Entrada:  100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:33:09) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "tartaruga"
elif(a==5):
	b = "garca"
elif(a==10):
	b = "arara"
elif(a==20):
	b = ""
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:35:00) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "Tartaruga"
elif(a==5):
	b = "Garca"
elif(a==10):
	b = "Arara"
elif(a==20):
	b = "Mico-leao-dourado"
elif(a==50):
	b = "Onca-pintada"
elif(a==100):
	b = "Garoupa"
else:
	b = "erro"
print(b)	
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:35:05) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "Tartaruga"
elif(a==5):
	b = "Garca"
elif(a==10):
	b = "Arara"
elif(a==20):
	b = "Mico-leao-dourado"
elif(a==50):
	b = "Onca-pintada"
elif(a==100):
	b = "Garoupa"
else:
	b = "erro"
print(b)	
-- EXECUTION TIME:
0.179837
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:35:32) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "Tartaruga"
elif(a==5):
	b = "Garca"
elif(a==10):
	b = "Arara"
elif(a==20):
	b = "Mico-leao-dourado"
elif(a==50):
	b = "Onca-pintada"
elif(a==100):
	b = "Garoupa"
else:
	b = "erro"
print(b)	
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:35:57) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "Tartaruga"
elif(a==5):
	b = "Garca"
elif(a==10):
	b = "Arara"
elif(a==20):
	b = "Mico-leao-dourado"
elif(a==50):
	b = "Onca-pintada"
elif(a==100):
	b = "Garoupa"
else:
	b = "erro"
print("Animal:", b)	
-- EXECUTION TIME:
0.189324
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:35:58) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "Tartaruga"
elif(a==5):
	b = "Garca"
elif(a==10):
	b = "Arara"
elif(a==20):
	b = "Mico-leao-dourado"
elif(a==50):
	b = "Onca-pintada"
elif(a==100):
	b = "Garoupa"
else:
	b = "erro"
print("Animal:", b)	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:36:12) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "Tartaruga"
elif(a==5):
	b = "Garca"
elif(a==10):
	b = "Arara"
elif(a==20):
	b = "Mico-leao-dourado"
elif(a==50):
	b = "Onca-pintada"
elif(a==100):
	b = "Garoupa"
else:
	b = "Invalido"
print("Animal:", b)	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:36:14) 
-- CODE:
a = int(input("Valor"))
print('Entrada:', a)
if(a==2):
	b = "Tartaruga"
elif(a==5):
	b = "Garca"
elif(a==10):
	b = "Arara"
elif(a==20):
	b = "Mico-leao-dourado"
elif(a==50):
	b = "Onca-pintada"
elif(a==100):
	b = "Garoupa"
else:
	b = "Invalido"
print("Animal:", b)	
-- EXECUTION TIME:
0.167899
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
